Adding Enchiladas Recipe and formatting index.html

--- a/recipes/enchiladas.html
+++ b/recipes/enchiladas.html
@@ -8,11 +8,11 @@
       }
     </style>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Baked Ziti</title>
+    <title>Enchiladas</title>
   </head>
   <body>
     <a href="../index.html">Home</a>
-    <h1>Baked Ziti</h1>
+    <h1>Enchiladas</h1>
     <p style="text-align: center">
       <img
         src="../img/bakedZiti.jpg"
