--- a/index.html
+++ b/index.html
@@ -2,12 +2,20 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <style>
+        h1{
+            text-align: center;
+        }
+    </style>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
   <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/bakedZiti.html">Baked Ziti</a>
+    <ul>
+      <li><a href="recipes/bakedZiti.html">Baked Ziti</a></li>
+      <li><a href="recipes/enchiladas.html">Enchiladas</a></li>
+    </ul>
   </body>
 </html>
   
